--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
+@font-face {
+    font-family: 'helsinkiregular';
+    src: url('fonts/helsinki-webfont.eot');
+    src: url('fonts/helsinki-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/helsinki-webfont.woff') format('woff'),
+         url('fonts/helsinki-webfont.ttf') format('truetype'),
+         url('fonts/helsinki-webfont.svg#helsinkiregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+td
+{color: green;
+font-size: 2 em}
+
 td
 {
-  color: red;
+    font-family: 'helsinkiregular',"Times New Roman", Times, serif;
 }
-td
-{font-size: 18px}
