--- a/style.css
+++ b/style.css
@@ -11,16 +11,14 @@ background-color: #e3e3e3;
          url('fonts/helsinki-webfont.ttf') format('truetype'),
          url('fonts/helsinki-webfont.svg#helsinkiregular') format('svg');
     font-weight: normal;
-    font-style: normal;
+    font-style: normal;}
 
-}
-h1,h3
-{color:green}
 
-td
+tr
 {color: green;
 font-size: 2 em;
 font-family: 'helsinkiregular',"Times New Roman", Times, serif;
+text-align: justify;
 
 }
 
@@ -35,3 +33,14 @@ background-color: #e3e3e3;
 }
 table td:nth-child(2n)
 {color: black}
+
+
+th
+{
+color: green;
+font-size: 3em;
+background-color:black;
+}
+table
+{width: 30%; height: 60%;
+}
